[project]
name = "dagst3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dagster>=1.12.3",
    "dagster-dg-cli>=1.12.3",
    "dagster-webserver>=1.12.3",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagst3r"
